--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,13 +1,46 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
+  --primary-font-family: 'Manrope', sans-serif;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  --regular-font-weight: 400;
+  --semi-bold-font-weight: 600;
+  --bold-font-weight: 700;
+
+  --mobile-font-size: 14px;
+  --desktop-tablet-main-heading-font-size: 60px;
+  --desktop-tablet-section-font-size: 40px;
+  --mobile-main-heading-font-size: 38px;
+  --mobile-section-font-size: 32px;
+  --lesson-price-font-size: 32px;
+  --about-numbers-font-size: 28px;
+  --paragraph-title-font-size: 20px;
+  --desktop-tablet-button-font-size: 18px;
+  --desktop-tablet-section-paragraph-font-size: 18px;
+  --desktop-tablet-card-paragraph-font-size: 16px;
+  --header-font-size: 14px;
+  --footer-font-size: 14px;
+  --mobile-button-font-size: 14px;
+  --mobile-paragraph-font-size: 14px;
+  --student-role-font-size: 12px;
+  --mobile-privacy-policy-font-size: 12px;
+
+  --button-border-radius: 12px;
+
+  --regular-line-height: 24px;
+  --desktop-tablet-main-heading-line-height: 70px;
+  --mobile-main-heading-line-height: 40px;
+
+  --black-color: #121417;
+  --green-color: #4dc274;
+  --semi-green-color: #bee8cc;
+  --light-green-color: #d4fde1;
+  --gray-color: #f3f5f6;
+  --white-color: #fff;
+
+  --green-linear-gradient: linear-gradient(
+    84.6deg,
+    var(--green-color) 2.25%,
+    var(--semi-green-color 131.25%)
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,16 +50,34 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  font-family: var(--primary-font-family);
+  font-weight: var(--regular-font-weight);
+  font-size: var(--mobile-font-size);
+  background-color: var(--white-color);
+  color: var(--black-color);
+  line-height: var(--regular-line-height);
 }
 
-main {
-  flex-grow: 1;
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
-main:has(.back-link) {
-  text-align: center;
+
+.btn {
+  color: var(--white-color);
+  background-color: var(--green-color);
+  cursor: pointer;
+  border-radius: var(--button-border-radius);
+  outline: none;
+  font-size: var(--mobile-button-font-size);
+  font-weight: var(--bold-font-weight);
+  padding: 14px 78px;
 }
