--- a/src/css/container.css
+++ b/src/css/container.css
@@ -3,17 +3,33 @@
   min-width: 320px;
   max-width: 375px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 20px;
 }
+
+.section {
+  margin-bottom: 80px;
+}
+
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding: 0 32px;
+  }
+
+  .section {
+    margin-bottom: 100px;
   }
 }
+
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding: 0 64px;
+  }
+
+  .section {
+    margin-bottom: 150px;
   }
 }
