--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,9 @@
   | default @import url()
   |============================
 */
+/* Normalizer */
+@import url('../../node_modules/modern-normalize/modern-normalize.css');
+
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
@@ -12,7 +15,11 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+@import url('./hero.css');
+@import url('./about.css');
+@import url('./lessons.css');
+@import url('./prop-leave-app.css');
+@import url('./teachers.css');
+@import url('./leave-app.css');
+@import url('./reviews.css');
 @import url('./footer.css');
