--- a/src/partials/prop-leave-app.html
+++ b/src/partials/prop-leave-app.html
@@ -1,3 +1,60 @@
 <section id="prop-leave-app" class="section prop-leave-app-section">
-  <div class="container">Proposal to leave an application</div>
+  <div class="container">
+    <h2 class="visually-hidden">English Package</h2>
+    <div class="prop-leave-app-card-container">
+      <p class="prop-leave-app-main-paragraph">
+        Master the <span class="main-paragraph-span">Language</span> with Our
+        English Package!
+      </p>
+      <div class="prop-leave-app-card">
+        <div class="prop-leave-app-card-content">
+          <p class="prop-leave-app-card-heading">Power of English</p>
+          <ul class="prop-leave-app-benefits-list">
+            <li class="benefits-item">
+              <div class="check-icon-wrapper">
+                <svg class="check-icon">
+                  <use href="../img/sprite.svg#check-icon"></use>
+                </svg>
+              </div>
+              <p class="benefits-paragraph">
+                Dive into captivating lessons designed to stimulate your
+                curiosity.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <div class="check-icon-wrapper">
+                <svg class="check-icon">
+                  <use href="../img/sprite.svg#check-icon"></use>
+                </svg>
+              </div>
+              <p class="benefits-paragraph second-benefits-paragraph">
+                Learn in a nurturing setting where every student's progress
+                matters.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <div class="check-icon-wrapper">
+                <svg class="check-icon">
+                  <use href="../img/sprite.svg#check-icon"></use>
+                </svg>
+              </div>
+              <p class="benefits-paragraph">
+                Experience the satisfaction of real progress as your language
+                skills and confidence grow with every session.
+              </p>
+            </li>
+          </ul>
+          <a class="btn prop-leave-app-link" href="#leave-app"
+            >Leave an application</a
+          >
+          <img
+            class="benefits-image"
+            src="../img/tall-stack-of-books.png"
+            srcset="../img/tall-stack-of-books@2x.png 2x"
+            alt="Tall stack of books"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
