fix: correct path to images

--- a/src/partials/prop-leave-app.html
+++ b/src/partials/prop-leave-app.html
@@ -13,7 +13,7 @@
             <li class="benefits-item">
               <div class="check-icon-wrapper">
                 <svg class="check-icon">
-                  <use href="../img/sprite.svg#check-icon"></use>
+                  <use href="./img/sprite.svg#check-icon"></use>
                 </svg>
               </div>
               <p class="benefits-paragraph">
@@ -24,7 +24,7 @@
             <li class="benefits-item">
               <div class="check-icon-wrapper">
                 <svg class="check-icon">
-                  <use href="../img/sprite.svg#check-icon"></use>
+                  <use href="./img/sprite.svg#check-icon"></use>
                 </svg>
               </div>
               <p class="benefits-paragraph second-benefits-paragraph">
@@ -35,7 +35,7 @@
             <li class="benefits-item">
               <div class="check-icon-wrapper">
                 <svg class="check-icon">
-                  <use href="../img/sprite.svg#check-icon"></use>
+                  <use href="./img/sprite.svg#check-icon"></use>
                 </svg>
               </div>
               <p class="benefits-paragraph">
@@ -49,8 +49,8 @@
           >
           <img
             class="benefits-image"
-            src="../img/tall-stack-of-books.png"
-            srcset="../img/tall-stack-of-books@2x.png 2x"
+            src="./img/tall-stack-of-books.png"
+            srcset="./img/tall-stack-of-books@2x.png 2x"
             alt="Tall stack of books"
           />
         </div>
