feat: implement header section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,23 @@
 <header class="header">
-  <div class="container">Header</div>
+  <div class="container">
+    <nav class="navbar">
+      <a href="index.html" class="logo">
+        <span class="black-logo-text">english</span><span class="green-logo-text">excellence</span><span class="black-logo-text">.</span>
+      </a>
+      <ul class="nav-links">
+        <li><a class="nav-link" href="#about">About us</a></li>
+        <li><a class="nav-link" href="#lessons">Our lessons</a></li>
+        <li><a class="nav-link" href="#teachers">Teachers</a></li>
+        <li><a class="nav-link" href="#reviews">Reviews</a></li>
+        <li><a class="nav-link" href="#contact">Contact us</a></li>
+      </ul>
+        <div class="header-social-icons">
+          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-facebook"></use></svg></a>
+          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-instagram"></use></svg></a>
+          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-youtube"></use></svg></a>
+        </div>
+    </nav>
+  </div>
 </header>
+
+
