--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,18 @@
 <section id="hero" class="section hero-section">
-  <div class="container">Hero</div>
+  <div class="container hero-content">Hero
+        <h1>Discover the joy of learning <span>English</span> with us!</h1>
+        <button class="cta-button">Leave an application</button>
+      </div>
+      <div class="hero-image">
+        <img src="girl-studying.jpg" alt="Girl studying with headphones">
+      </div>
+      <!-- Okrągły przycisk w prawym dolnym rogu -->
+      <a href="#" class="scroll-button">
+        &#x25BC; <!-- Ikona strzałki w dół -->
+      </a>
+    
+
+
+
+  </div>
 </section>
