--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,18 +1,28 @@
 <section id="hero" class="section hero-section">
-  <div class="container hero-content">Hero
-        <h1>Discover the joy of learning <span>English</span> with us!</h1>
-        <button class="cta-button">Leave an application</button>
+  <div class="container hero-content">
+      <div class="hero-tittle">
+        <h1>Discover the joy of learning <span class="english-green">English</span> with us!</h1>
       </div>
-      <div class="hero-image">
-        <img src="girl-studying.jpg" alt="Girl studying with headphones">
+      <button class="btn cta-button">Leave an application</button>
+      
+      <div class="round-button"></div>
+      
+      <div class="desktop-hero-image">
+        <img src="../img/smiley-girl-wearing-headphones-desktop.jpg" 
+             srcset="../img/smiley-girl-wearing-headphones-desktop.jpg 1x, ../img/smiley-girl-wearing-headphones-desktop@2x.jpg 2x" 
+             alt="Girl studying with headphones">
       </div>
-      <!-- Okrągły przycisk w prawym dolnym rogu -->
-      <a href="#" class="scroll-button">
-        &#x25BC; <!-- Ikona strzałki w dół -->
-      </a>
+      <div class="tablet-hero-image">
+        <img src="../img/smiley-girl-wearing-headphones-tablet.jpg"
+          srcset="../img/smiley-girl-wearing-headphones-tablet.jpg 1x, ../img/smiley-girl-wearing-headphones-tablet@2x.jpg 2x"
+          alt="Girl studying with headphones">
+      </div>
+      <div class="mobile-hero-image">
+        <img src="../img/smiley-girl-wearing-headphones-mobile.jpg"
+          srcset="../img/smiley-girl-wearing-headphones-mobile.jpg 1x, ../img/smiley-girl-wearing-headphones-mobile@2x.jpg 2x"
+          alt="Girl studying with headphones">
+      </div>
+
     
-
-
-
   </div>
 </section>
