--- a/src/css/about.css
+++ b/src/css/about.css
@@ -108,7 +108,7 @@
         padding: 0 23px;
     }
 
-    .about-heder {
+    .about-header {  /* poprawiona literówka */
         font-size: 40px;
         line-height: 1.2;
         letter-spacing: -0.02em;
@@ -156,15 +156,6 @@
         margin: 0 96px;
         padding: 0 87px;
     }
-  }
-  
-  /* Styles for Desktop devices */
-  @media only screen and (min-width: 1280px) {
-    .about-card-container {
-        margin: 0 96px;
-        padding: 0 87px;
-        }
-
 
     .about-marker::after {
         top: 28px;
@@ -199,4 +190,4 @@
         height: 353px;
         border-radius: 30px;
     }
-
+}
