--- a/src/css/about.css
+++ b/src/css/about.css
@@ -102,6 +102,10 @@
     background-color: var(--green-color);
 }
 
+.about-picture-tablet, .about-picture-desktop {
+    display: none;
+}
+
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
     .about-card-container {
@@ -148,6 +152,14 @@
         height: 243px;
         border-radius: 30px;
     }
+
+    .about-picture-mobile{
+        display: none;
+    }
+
+    .about-picture-tablet {
+        display: block;
+    }
 }
 
 /* Styles for Desktop devices */
@@ -189,5 +201,13 @@
         max-width: 310px;
         height: 353px;
         border-radius: 30px;
+    }
+
+    .about-picture-mobile, .about-picture-tablet {
+        display: none;
+    }
+
+    .about-picture-desktop {
+        display: block;
     }
 }
