--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -42,20 +42,10 @@
         </li>
       </ul>
       <div class="about-picture">
-          <img class="about-picture-mobile"
+          <img class="about-picture-img"
            src="./img/memoji.png" 
            srcset="./img/memoji.png 1x, ./img/memoji@2x.png 2x"
            alt="Smiling girl pointing her finger"
-          />
-          <img class="about-picture-tablet"
-            src="./img/memoji.png"
-            srcset="./img/memoji.png 1x, ./img/memoji@2x.png 2x"
-            alt="Smiling girl pointing her finger"
-          />
-          <img class="about-picture-desktop"
-            src="./img/memoji.png"
-            srcset="./img/memoji.png 1x, ./img/memoji@2x.png 2x"
-            alt="Smiling girl pointing her finger"
           />
       </div>
     </div>
