feat: adding out reachers section

--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -1,3 +1,55 @@
 <section id="teachers" class="section teachers-section">
-  <div class="container">Meet out teachers</div>
+  <div class="container">
+    <div class="teachers-card-container">
+      <h2 class="teachers-header">Meet Our <span class="teachers-marker">Teachers</span></h2>
+      <p class="teachers-paragraph">Discover our team of dedicated educators, committed to guiding you on your journey
+        to English
+        proficiency with personalized and engaging instruction</p>
+    </div>
+    <div class="teachers-list-container">
+      <ul class="teachers-list">
+        <li class="teachers-list-item">
+          <div class="teachers-list-item-container">
+            <img src="img/serious-woman.jpg" alt="Maria" />
+            <h3 class="teachers-list-header">Maria</h3>
+            <p class="teachers-list-paragraph">A seasoned linguist and our primary specialist in beginner-level
+              instruction, Maria brings warmth
+              and patience to every
+              class</p>
+          </div>
+        </li>
+        <li class="teachers-list-item">
+          <div class="teachers-list-item-container">
+            <img src="img/serious-man-with-glasses.jpg" alt="Artem" />
+            <h3 class="teachers-list-header">Artem</h3>
+            <p class="teachers-list-paragraph">With his innovative teaching techniques and a focus on interactive
+              learning, Artem excels in
+              keeping students engaged
+              and motivated</p>
+          </div>
+        </li>
+        <li class="teachers-list-item">
+          <div class="teachers-list-item-container">
+            <img src="img/smiling-woman-with-glasses.jpg" alt="Ilona" />
+            <h3 class="teachers-list-header">Ilona</h3>
+            <p class="teachers-list-paragraph">A specialist in advanced English, Ilona provides intensive instruction,
+              ensuring students gain
+              confidence in complex
+              language tasks</p>
+          </div>
+        </li>
+        <li class="teachers-list-item">
+          <div class="teachers-list-item-container">
+            <img src="img/smiling-man-with-beard.jpg" alt="Volodymyr" />
+            <h3 class="teachers-list-header">Volodymyr</h3>
+            <p class="teachers-list-paragraph">Our expert in English for specific purposes, Volodymyr tailors his
+              approach to meet individual
+              career and
+              industry-specific language needs</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
 </section>
