fix: solves the problem with displaying photos

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,18 +8,18 @@
       <div class="round-button"></div>
       
       <div class="desktop-hero-image">
-        <img src="../img/smiley-girl-wearing-headphones-desktop.jpg" 
-             srcset="../img/smiley-girl-wearing-headphones-desktop.jpg 1x, ../img/smiley-girl-wearing-headphones-desktop@2x.jpg 2x" 
+        <img src="./img/smiley-girl-wearing-headphones-desktop.jpg" 
+             srcset="./img/smiley-girl-wearing-headphones-desktop.jpg 1x, ./img/smiley-girl-wearing-headphones-desktop@2x.jpg 2x" 
              alt="Girl studying with headphones">
       </div>
       <div class="tablet-hero-image">
-        <img src="../img/smiley-girl-wearing-headphones-tablet.jpg"
-          srcset="../img/smiley-girl-wearing-headphones-tablet.jpg 1x, ../img/smiley-girl-wearing-headphones-tablet@2x.jpg 2x"
+        <img src="./img/smiley-girl-wearing-headphones-tablet.jpg"
+          srcset="./img/smiley-girl-wearing-headphones-tablet.jpg 1x, ./img/smiley-girl-wearing-headphones-tablet@2x.jpg 2x"
           alt="Girl studying with headphones">
       </div>
       <div class="mobile-hero-image">
-        <img src="../img/smiley-girl-wearing-headphones-mobile.jpg"
-          srcset="../img/smiley-girl-wearing-headphones-mobile.jpg 1x, ../img/smiley-girl-wearing-headphones-mobile@2x.jpg 2x"
+        <img src="./img/smiley-girl-wearing-headphones-mobile.jpg"
+          srcset="./img/smiley-girl-wearing-headphones-mobile.jpg 1x, ./img/smiley-girl-wearing-headphones-mobile@2x.jpg 2x"
           alt="Girl studying with headphones">
       </div>
 
