feat: adding application section
Work in progress.

--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -17,6 +17,7 @@
     </div>
     <div class="form-container">
       <div class="image-container">
+        <div class="overlay"></div>
         <div class="lesson-info">
           <h2>1000</h2>
           <p>of our online English language lessons! This journey has been full of discovery, growth and unforgettable
