--- a/src/css/leave-app.css
+++ b/src/css/leave-app.css
@@ -16,71 +16,91 @@
     line-height: var(--desktop-tablet-main-heading-line-height);
     font-weight: var(--bold-font-weight);
     color: var(--black-color);
+    
 }
 
 .application-marker {
     position: relative;
+    display: inline-block;
+    z-index: 1;
 }
 
 .application-marker::after {
-    content: "";
+    content: '';
     position: absolute;
-    display: block;
-    color: red;
-    top: 29px;
-    right: -2px;
-    width: 41px;
-    height: 12px;
-    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.4em;
     background-color: #BEE8CC;
     z-index: -1;
+    border-radius: 8px;
 }
 
 .description {
     font-size: var(--desktop-tablet-card-paragraph-font-size);
-    color: var(--black-color);
+    color: #12141780;
     line-height: var(--desktop-tablet-section-line-height);
-    margin-top: 10px;
+    margin-top: 16px;
 }
 
 .form-container {
     display: flex;
     background-color: var(--white-color);
-    border-radius: var(--desktop-tablet-card-border-radius);
+    
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
 }
 
 .image-container {
-    width: 50%;
-    background-image: url('path-to-your-image.jpg');
-    background-size: cover;
-    background-position: center;
+    position: relative;
+    width: 492px;
+    height: 578px;
+    background-image: url("../img/girl-learning-with-laptop.jpg");
+    background-size: contain;
+    background-position: top;
     background-repeat: no-repeat;
     padding: 20px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    background-color: var(--light-green-color);
+    border-radius: var(--desktop-tablet-card-border-radius);
+}
+
+@media only screen and (min-resolution: 192dpi) {
+    .image-container {
+        background-image: url('../img/girl-learning-with-laptop@2x.jpg');
+    }
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background-color: var(--dark-green-color);
+    clip-path: ellipse(298px 268px at 50% 50%);
+
 }
 
 .lesson-info {
-    background-color: var(--white-half-transparent-color);
+    width: 452px;
     padding: 20px;
-    border-radius: var(--mobile-card-border-radius);
     text-align: center;
+    z-index: 1;
 }
 
 .lesson-info h2 {
-    font-size: var(--lesson-price-font-size);
-    color: var(--dark-green-color);
+    font-size: var(--desktop-tablet-section-font-size);
+    color: #FFFFFFB2;
     font-weight: var(--bold-font-weight);
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 .lesson-info p {
     font-size: var(--desktop-tablet-card-paragraph-font-size);
-    color: var(--black-color);
+    line-height: 1.5;
+    color: #FFFFFFB2;
 }
 
 .application-form {
