Fix: fixes the problem with displaying photos

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,7 +11,7 @@
             <div class="rewiev-item-container">
                 <div class="rewiev-people-container ">
 
-                    <img class="review-img" src="../img/serious-woman-with-blond-hair.jpg">
+                    <img class="review-img" src="./img/serious-woman-with-blond-hair.jpg">
                     <div class="text-people">
                         <h4>Anna</h4>
                         <p>Student</p>
@@ -24,7 +24,7 @@
             <div class="rewiev-item-container">
                 <div class="rewiev-people-container">
 
-                    <img class="review-img" src="../img/serious-man-with-hand-on-beard.jpg">
+                    <img class="review-img" src="./img/serious-man-with-hand-on-beard.jpg">
                     <div class="text-people">
                         <h4>Mykhailo</h4>
                         <p>Student</p>
@@ -35,7 +35,7 @@
             <div class="rewiev-item-container">
                 <div class="rewiev-people-container">
 
-                    <img class="review-img" src="../img/woman-with-bubble-gum.jpg">
+                    <img class="review-img" src="./img/woman-with-bubble-gum.jpg">
                     <div class="text-people">
                         <h4>Victoria</h4>
                         <p>Student</p>
