--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,4 +1,4 @@
-<section class="lessons-section">
+<section id="lessons" class="lessons-section">
   <h3 class="lessons-heading">Our <span class="lessons-underline">lessons</span></h3>
   <p class="lessons-paragraph">
     Our lessons are carefully structured and interactive, designed to promote rapid language acquisition
