--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -151,14 +151,17 @@ body {
     color: var (--white-color);
 }
 
+/* Style for the Standard card button */
 .lessons-standard .lessons-btn {
     border: 2px solid var(--white-color);
     color: var(--white-color);
+    background-color: var(--green-color);
 }
 
 .lessons-standard .lessons-btn:hover {
-    background-color: var(--dark-green-color);
-    border: 2px solid var(--white-color);
+    background-color: var(--white-color);
+    color: var(--green-color);
+    border: 2px solid var(--green-color);
 }
 
 .lessons-btn {
