--- a/src/css/leave-app.css
+++ b/src/css/leave-app.css
@@ -9,6 +9,8 @@
 .content-container {
     text-align: center;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .application-header {
@@ -16,7 +18,6 @@
     line-height: var(--desktop-tablet-main-heading-line-height);
     font-weight: var(--bold-font-weight);
     color: var(--black-color);
-    
 }
 
 .application-marker {
@@ -47,9 +48,8 @@
 .form-container {
     display: flex;
     background-color: var(--white-color);
-    
     overflow: hidden;
-    
+    flex-direction: row;
 }
 
 .image-container {
@@ -73,6 +73,23 @@
     }
 }
 
+.image-container2 {
+    width: 492px;
+    height: 578px;
+}
+
+.image-container2 img {
+    z-index: 2;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+.overlay2 {
+    background-color: var(--dark-green-color);
+    margin-top: -20em;
+    min-height: 70%;
+}
+
 .overlay {
     position: absolute;
     bottom: 0;
@@ -80,12 +97,9 @@
     height: 50%;
     background-color: var(--dark-green-color);
     clip-path: ellipse(298px 268px at 50% 50%);
-
 }
 
 .lesson-info {
-    width: 452px;
-    padding: 20px;
     text-align: center;
     z-index: 1;
 }
@@ -95,6 +109,7 @@
     color: #FFFFFFB2;
     font-weight: var(--bold-font-weight);
     margin-bottom: 8px;
+    padding-top: 7.7em;
 }
 
 .lesson-info p {
