--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Application Form</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
     <section class="application-section">
         <div class="content-container">
             <h2 class="application-header">Leave an <span class="application-marker">application</span></h2>
@@ -5,7 +16,7 @@
         </div>
         <div class="form-container">
             <div class="image-container2">
-                <img class=form-img src="./img/girl-learning-with-laptop@2x.jpg" alt="">
+                <img class=form-img src="../img/girl-learning-with-laptop@2x.jpg" alt="">
                 <div class="overlay2">
                     <div class="lesson-info">
                         <h2>1000</h2>
