--- a/src/css/leave-app.css
+++ b/src/css/leave-app.css
@@ -1,4 +1,4 @@
-application-section {
+.application-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,3 +164,4 @@ application-section {
 .application-form button:hover {
     background-color: var(--dark-green-color);
 }
+
