--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -16,7 +16,7 @@
         </div>
         <div class="form-container">
             <div class="image-container2">
-                <img class=form-img src="../img/girl-learning-with-laptop@2x.jpg" alt="">
+                <img class=form-img src="./img/girl-learning-with-laptop@2x.jpg" alt="">
                 <div class="overlay2">
                     <div class="lesson-info">
                         <h2>1000</h2>
