--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,9 @@
   <div class="container">
     <nav class="navbar">
       <a href="index.html" class="logo">
-        <span class="black-logo-text">english</span><span class="green-logo-text">excellence</span><span class="black-logo-text">.</span>
+        <span class="black-logo-text">english</span
+        ><span class="green-logo-text">excellence</span
+        ><span class="black-logo-text">.</span>
       </a>
       <ul class="nav-links">
         <li><a class="nav-link" href="#about">About us</a></li>
@@ -11,13 +13,58 @@
         <li><a class="nav-link" href="#reviews">Reviews</a></li>
         <li><a class="nav-link" href="#contact">Contact us</a></li>
       </ul>
-        <div class="header-social-icons">
-          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-facebook"></use></svg></a>
-          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-instagram"></use></svg></a>
-          <a href="#"><svg class="header-icon"><use href="public/icons.svg#icon-youtube"></use></svg></a>
-        </div>
+      <div class="header-social-icons">
+        <a href="#"
+          ><svg class="header-icon">
+            <use href="public/icons.svg#icon-facebook"></use></svg        ></a>
+        <a href="#"
+          ><svg class="header-icon">
+            <use href="public/icons.svg#icon-instagram"></use></svg        ></a>
+        <a href="#"
+          ><svg class="header-icon">
+            <use href="public/icons.svg#icon-youtube"></use></svg        ></a>
+      </div>
+
+      <div class="button">
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <img class="burger-icon" src="./img/burger.svg" />
+        </button>
+      </div>
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+          <svg
+            fill="#000000"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+
+        <ul class="mobile-menu">
+          <li><a href="./studio.html" class="link">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="./contacts.html" class="link">Contacts</a></li>
+        </ul>
+      </div>
+
+      <script
+        defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"
+      ></script>
+      <script defer src="js/mobile-menu.js"></script>
     </nav>
   </div>
 </header>
-
-
