--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,13 +16,16 @@
       <div class="header-social-icons">
         <a href="#"
           ><svg class="header-icon">
-            <use href="public/icons.svg#icon-facebook"></use></svg        ></a>
+            <use href="public/icons.svg#icon-facebook"></use></svg
+        ></a>
         <a href="#"
           ><svg class="header-icon">
-            <use href="public/icons.svg#icon-instagram"></use></svg        ></a>
+            <use href="public/icons.svg#icon-instagram"></use></svg
+        ></a>
         <a href="#"
           ><svg class="header-icon">
-            <use href="public/icons.svg#icon-youtube"></use></svg        ></a>
+            <use href="public/icons.svg#icon-youtube"></use></svg
+        ></a>
       </div>
 
       <div class="button">
@@ -35,27 +38,81 @@
         </button>
       </div>
       <div class="menu-container js-menu-container" id="mobile-menu">
-        <button class="menu-toggle js-close-menu">
-          <svg
-            fill="#000000"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </button>
+        <div class="no-pointer-events"></div>
+        <div class="backdrop">
+          <button class="menu-toggle js-close-menu">
+            <svg
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+          </button>
 
-        <ul class="mobile-menu">
-          <li><a href="./studio.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="./contacts.html" class="link">Contacts</a></li>
-        </ul>
+          <ul class="mobile-menu">
+            <li>
+              <button
+                class="js-close-menu-about nav-link-menu"
+                onclick="location.href='#about';"
+              >
+                About us
+              </button>
+            </li>
+            <li>
+              <button
+                class="js-close-menu-lessons nav-link-menu"
+                onclick="location.href='#lessons';"
+              >
+                Our lessons
+              </button>
+            </li>
+            <li>
+              <button
+                class="js-close-menu-teachers nav-link-menu"
+                onclick="location.href='#teachers';"
+              >
+                Teachers
+              </button>
+            </li>
+            <li>
+              <button
+                class="js-close-menu-reviews nav-link-menu"
+                onclick="location.href='#reviews';"
+              >
+                Reviews
+              </button>
+            </li>
+            <li>
+              <button
+                class="js-close-menu-contact nav-link-menu"
+                onclick="location.href='#contact';"
+              >
+                Contact us
+              </button>
+            </li>
+          </ul>
+
+          <div class="menu-social-icons">
+            <a href="#"
+              ><svg class="menu-icon">
+                <use href="public/icons.svg#icon-facebook"></use></svg
+            ></a>
+            <a href="#"
+              ><svg class="menu-icon">
+                <use href="public/icons.svg#icon-instagram"></use></svg
+            ></a>
+            <a href="#"
+              ><svg class="menu-icon">
+                <use href="public/icons.svg#icon-youtube"></use></svg
+            ></a>
+          </div>
+        </div>
       </div>
 
       <script
