fix: adding styles to aplication formular

--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -20,7 +20,7 @@
           <p class="application-image-main-paragraph application-header">
             1000
           </p>
-          <p>
+          <p class="application-description">
             of our online English language lessons! This journey has been full
             of discovery, growth and unforgettable moments, and we are happy to
             share this joyful event with you.
