--- a/src/css/leave-app.css
+++ b/src/css/leave-app.css
@@ -1,244 +1,241 @@
 /* Styles for Mobile devices (domyślnie kolumna) */
 
 .application-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: var(--white-color);
-    margin-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: var(--white-color);
+  margin-bottom: 80px;
 }
 
 .application-heading-container {
-    text-align: center;
-    margin-bottom: 64px;
-    display: flex;
-    flex-direction: column;
+  text-align: center;
+  margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
 }
 
 .application-header {
-    font-family: var(--primary-font-family);
-    font-weight: var(--bold-font-weight);
-    font-size: var(--mobile-section-font-size);
-    line-height: 1.125;
-    letter-spacing: -0.02em;
-    margin-bottom: 16px;
+  font-family: var(--primary-font-family);
+  font-weight: var(--bold-font-weight);
+  font-size: var(--mobile-section-font-size);
+  line-height: 1.125;
+  letter-spacing: -0.02em;
+  margin-bottom: 16px;
 }
 
 .application-marker {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
 }
 
 .application-marker::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 0.4em;
-    background-color: #bee8cc;
-    z-index: -1;
-    border-radius: 8px;
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0.4em;
+  background-color: #bee8cc;
+  z-index: -1;
+  border-radius: 8px;
 }
 
 .application-heading-description {
-    font-size: var(--desktop-tablet-button-font-size);
-    color: #12141780;
-    line-height: 1.667;
-    margin: 0 auto;
+  font-size: var(--desktop-tablet-button-font-size);
+  color: #12141780;
+  line-height: 1.667;
+  margin: 0 auto;
 }
 
 .application-form-container {
-    display: flex;
-    background-color: var(--white-color);
-    overflow: hidden;
-    flex-direction: row;
+  display: flex;
+  background-color: var(--white-color);
+  overflow: hidden;
+  flex-direction: row;
 }
 
 .application-image-container {
-    color: var(--white-color);
-    background-color: var(--green-color);
-    border-radius: var(--desktop-tablet-card-border-radius);
-    overflow: hidden;
-    max-width: 492px;
-    display: none;
+  color: var(--white-color);
+  background-color: var(--green-color);
+  border-radius: var(--desktop-tablet-card-border-radius);
+  overflow: hidden;
+  max-width: 492px;
+  display: none;
 }
 
 .application-image-container .application-image {
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
 
 .application-image-container .image-container-description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
-    padding: 0 20px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  padding: 0 20px 40px;
 }
 
 .application-form {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 .application-form input,
 .application-form textarea {
-    padding: 10px;
-    border: 1px solid var(--gray-color);
-    border-radius: var(--button-border-radius);
-    font-size: var(--mobile-font-size);
+  padding: 10px;
+  border: 1px solid var(--gray-color);
+  border-radius: var(--button-border-radius);
+  font-size: var(--mobile-font-size);
 }
 
 .application-form textarea {
-    height: 100px;
-    resize: none;
+  height: 100px;
+  resize: none;
 }
 
 .formular-border {
-    width: 100%;
-    height: 56px;
-    border: 1px solid var(--gray-color);
-    border-radius: 12px;
-    outline: none;
+  width: 100%;
+  height: 56px;
+  border: 1px solid var(--gray-color);
+  border-radius: 12px;
+  outline: none;
 }
 
 .formular-border:focus {
-    border-color: var(--dark-green-color);
-    outline: none;
+  border-color: var(--dark-green-color);
+  outline: none;
 }
 
 /* Styles for Mobile devices (Teacher options in column) */
 .teacher-options {
-    margin-bottom: 40px;
-    font-size: var(--paragraph-title-font-size);
-    font-weight: var(--semi-bold-font-weight);
-    display: flex;
-    flex-direction: column;
-    /* Kolumnowy układ na telefonach */
-    gap: 8px;
+  margin-bottom: 32px;
+  font-size: var(--paragraph-title-font-size);
+  font-weight: var(--semi-bold-font-weight);
+  display: flex;
+  flex-direction: column; /* Kolumnowy układ na telefonach */
+  gap: 8px;
 }
 
 .teacher-options input[type='radio'] {
-    accent-color: green;
-    width: 20px;
-    height: 20px;
+  accent-color: green;
+  width: 20px;
+  height: 20px;
 }
 
 .choose-teacher {
-    font-size: var(--paragraph-title-font-size);
-    font-weight: var(--semi-bold-font-weight);
-    line-height: 1.5;
-    color: var(--black-color);
-    margin-bottom: 16px;
+  font-size: var(--paragraph-title-font-size);
+  font-weight: var(--semi-bold-font-weight);
+  line-height: 1.5;
+  color: var(--black-color);
+  margin-bottom: 16px;
 }
 
 .send-info {
-    font-size: var(--student-role-font-size);
-    font-weight: var(--regular-font-weight);
-    line-height: 1.333;
-    color: #12141780;
+  font-size: var(--student-role-font-size);
+  font-weight: var(--regular-font-weight);
+  line-height: 1.333;
+  color: #12141780;
 }
 
 /* Styles for Tablet devices (row layout for Teacher options) */
 @media only screen and (min-width: 768px) {
-    .application-heading-container {
-        margin-bottom: 64px;
-    }
+  .application-heading-container {
+    margin-bottom: 64px;
+  }
 
-    .application-header {
-        margin-bottom: 16px;
-    }
+  .application-header {
+    margin-bottom: 16px;
+  }
 
-    .application-heading-description {
-        width: 586px;
-    }
+  .application-heading-description {
+    width: 586px;
+  }
 
-    .application-form {
-        display: flex;
-        flex-direction: column;
-        gap: 18px;
-        padding: 0 102px;
-        margin-top: 64px;
-    }
+  .application-form {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    padding: 0 102px;
+    margin-top: 64px;
+  }
 
-    /* Teacher options in row on tablets */
-    .teacher-options {
-        flex-direction: row;
-        /* Zmieniamy na rząd na tabletach */
-        gap: 30px;
-        margin-bottom: 102px;
-    }
+  /* Teacher options in row on tablets */
+  .teacher-options {
+    flex-direction: row; /* Zmieniamy na rząd na tabletach */
+    gap: 30px;
+    margin-bottom: 32px;
+  }
 
-    .teacher-options input[type='radio'] {
-        width: 24px;
-        height: 24px;
-    }
+  .teacher-options input[type='radio'] {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .application-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: var(--white-color);
-    margin-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: var(--white-color);
+  margin-bottom: 80px;
 }
 
 .choose-teacher {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 
 .send-info {
-    font-size: 14px;
-    font-weight: var(--regular-font-weight);
-    line-height: 1.714;
-    color: #12141780;
-    margin-bottom: 16px;
+  font-size: 14px;
+  font-weight: var(--regular-font-weight);
+  line-height: 1.714;
+  color: #12141780;
+  margin-bottom: 16px;
 }
 
 /* Styles for Desktop devices (row layout for Teacher options) */
 @media only screen and (min-width: 1280px) {
-    .application-form {
-        margin-top: 0px;
-    }
+  .application-form {
+    margin-top: 0px;
+  }
 
-    .application-description {
-        font-size: var(--desktop-tablet-card-paragraph-font-size);
-        font-weight: var(--regular-font-weight);
-        line-height: 1.5;
-        color: #FFFFFFB2;
-        text-align: center;
-    }
+  .application-description {
+    font-size: var(--desktop-tablet-card-paragraph-font-size);
+    font-weight: var(--regular-font-weight);
+    line-height: 1.5;
+    color: #FFFFFFB2;
+    text-align: center;
+  }
 
-    .application-image-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
+  .application-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 
-    .application-image-main-paragraph {
-        margin-bottom: 8px;
-        font-size: var(--mobile-main-heading-line-height);
-        font-weight: var(--bold-font-weight);
-        line-height: 1.333;
-        color: #FFFFFFB2;
-        text-align: center;
-    }
+  .application-image-main-paragraph {
+    margin-bottom: 8px;
+    font-size: var(--mobile-main-heading-line-height);
+    font-weight: var(--bold-font-weight);
+    line-height: 1.333;
+    color: #FFFFFFB2;
+    text-align: center;
+  }
 
-    .application-heading-description {
-        width: 709px;
-    }
+  .application-heading-description {
+    width: 709px;
+  }
 
-    /* Teacher options in row on desktops */
-    .teacher-options {
-        flex-direction: row;
-        /* Rząd na monitorach */
-        gap: 20px;
-        margin-bottom: 102px;
-    }
+  /* Teacher options in row on desktops */
+  .teacher-options {
+    flex-direction: row; /* Rząd na monitorach */
+    gap: 20px;
+    margin-bottom: 32px;
+  }
 }
