fix: adding navigation

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,9 +3,10 @@
       <div class="hero-tittle">
         <h1>Discover the joy of learning <span class="english-green">English</span> with us!</h1>
       </div>
-      <button class="btn cta-button">Leave an application</button>
+      <a href="#leave-application" class="btn cta-button">Leave an application</a>
       
-      <div class="round-button"></div>
+      
+      <a href="#leave-application" class="round-button"></a>
       
       <div class="desktop-hero-image">
         <img src="./img/smiley-girl-wearing-headphones-desktop.jpg" 
