--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -1,4 +1,4 @@
-<section class="application-section">
+<section id="leave-application" class="application-section">
   <div class="container">
     <div class="application-heading-container">
       <h2 class="application-header">
