--- a/src/partials/prop-leave-app.html
+++ b/src/partials/prop-leave-app.html
@@ -44,7 +44,7 @@
               </p>
             </li>
           </ul>
-          <a class="btn prop-leave-app-link" href="#leave-app"
+          <a class="btn prop-leave-app-link" href="#leave-application"
             >Leave an application</a
           >
           <img
