--- a/src/partials/leave-app.html
+++ b/src/partials/leave-app.html
@@ -1,7 +1,7 @@
 <section id="leave-application" class="application-section">
   <div class="container">
     <div class="application-heading-container">
-      <h2 class="application-header">
+      <h2 class="about-header">
         Leave an <span class="application-marker">application</span>
       </h2>
       <p class="application-heading-description">
