--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -91,7 +91,7 @@
             <li>
               <button
                 class="js-close-menu-contact nav-link-menu"
-                onclick="location.href='#contact';"
+                onclick="location.href='#footer';"
               >
                 Contact us
               </button>
