--- a/src/css/base.css
+++ b/src/css/base.css
@@ -65,7 +65,7 @@
 }
 
 body {
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   margin: 0;
   font-family: var(--primary-font-family);
