--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,9 +1,9 @@
 /* Styles for Mobile devices */
 
 .hero-icon {
-        fill: blue;
-        width: 295px;
-        height: 295px;
+    fill: blue;
+    width: 295px;
+    height: 295px;
     }
 
 .hero-content {
@@ -24,6 +24,20 @@
     overflow: hidden;
 }
 
+.mobile-hero-image::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 20px;
+    right: 20px;
+    bottom: 0px;
+    background: linear-gradient(357.37deg, rgba(0, 0, 0, 0.4) 39.23%, rgba(0, 0, 0, 0) 66.28%);
+    z-index: 1;
+    pointer-events: none;
+    border-radius: 20px;
+}
+
 .hero-tittle {
     text-align: left;
     position: absolute;
@@ -34,6 +48,7 @@
     height: 120px;
     top: 425px;
     left: 40px;
+    z-index: 2;
 }
 
 #hero h1 {
@@ -56,6 +71,7 @@
     position: absolute;
     top: 585px;
     left:40px;
+    z-index: 2;
 }
 
 .round-button{
@@ -71,6 +87,7 @@
     border-radius: 19px;
     background-color: white;
     transition: background-color var(--transition-general), background-image var(--transition-general);
+    z-index: 2;
 }
 
 .round-button:hover {
@@ -87,6 +104,19 @@
         display: block;
         border-radius: 30px;
         overflow: hidden;
+    }
+
+    .tablet-hero-image::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 32px;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(95.97deg, rgba(0, 0, 0, 0.4) 36.36%, rgba(0, 0, 0, 0) 51.43%);
+        z-index: 1;
+        pointer-events: none;
+        border-radius: 30px;
     }
 
     .desktop-hero-image {
@@ -107,6 +137,7 @@
         height: 210px;
         top: 260px;
         left: 64px;
+        z-index: 2;
     }
 
      #hero h1 {
@@ -129,7 +160,9 @@
         position: absolute;
         top: 502px;
         left: 62px;
+        z-index: 2;
     }
+
     .round-button {
         display: flex;
         position: absolute;
@@ -141,6 +174,7 @@
         height: 48px;
         border-radius: 24px;
         background-color: white;
+        z-index: 2;
     }
 
 }
@@ -153,6 +187,19 @@
         border-radius: 30px;
         overflow: hidden;
     }
+
+    .desktop-hero-image::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 64px;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(95.97deg, rgba(0, 0, 0, 0.4) 36.36%, rgba(0, 0, 0, 0) 51.43%);
+        z-index: 1; 
+        pointer-events: none;
+        border-radius: 30px;
+    }      
 
     .tablet-hero-image {
         display: none;
@@ -181,19 +228,23 @@
         position: absolute;
         top: 164px;
         left: 128px;
+        z-index: 2;
     }
 
     .cta-button {
         position: absolute;
         top: 406px;
         left: 128px;
+        z-index: 2;
     }
 
     .round-button {
         position: absolute;
         top: 549px;
         left: 1116px;
-}
+        z-index: 2;
+}   
+    
 
 }
 
