--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
       <a href="#leave-application" class="btn cta-button">Leave an application</a>
       
       
-      <a href="#leave-application" class="round-button"></a>
+      <a href="#footer" class="round-button"></a>
       
       <div class="desktop-hero-image">
         <img src="./img/smiley-girl-wearing-headphones-desktop.jpg" 
