--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,7 +14,7 @@
             >+380 (68) 443-94-26</a
           >
           <p>Address:</p>
-          <a id="Address" class="link" href="adress:32a M. Bazhana ave"
+          <a id="Address" class="link" href="https://g.co/kgs/pnn17NQ"
             >32a M. Bazhana ave</a
           >
         </address>
@@ -29,15 +29,15 @@
         </ul>
       </nav>
       <div class="header-social-icons-footer">
-        <a href="#"
+        <a href="https://www.facebook.com/goit.polska/"
           ><svg class="header-icon-footer">
             <use href="public/icons.svg#icon-facebook"></use></svg
         ></a>
-        <a href="#"
+        <a href="https://www.instagram.com/goitclub/"
           ><svg class="header-icon-footer">
             <use href="public/icons.svg#icon-instagram"></use></svg
         ></a>
-        <a href="#"
+        <a href="https://www.youtube.com/channel/UCEdkY9jDg2aHpq6Ms1kW4kQ"
           ><svg class="header-icon-footer">
             <use href="public/icons.svg#icon-youtube"></use></svg
         ></a>
