fix: adding url and nav

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,19 +14,17 @@
         <li><a class="nav-link" href="#footer">Contact us</a></li>
       </ul>
       <div class="header-social-icons">
-        <a href="#"
-          ><svg class="header-icon">
-            <use href="public/icons.svg#icon-facebook"></use></svg
-        ></a>
-        <a href="#"
-          ><svg class="header-icon">
-            <use href="public/icons.svg#icon-instagram"></use></svg
-        ></a>
-        <a href="#"
-          ><svg class="header-icon">
-            <use href="public/icons.svg#icon-youtube"></use></svg
-        ></a>
+        <a href="https://www.facebook.com/profile.php?id=100064023163538" target="_blank"><svg class="header-icon">
+            <use href="public/icons.svg#icon-facebook"></use>
+          </svg></a>
+        <a href="https://www.instagram.com/goitclub/" target="_blank"><svg class="header-icon">
+            <use href="public/icons.svg#icon-instagram"></use>
+          </svg></a>
+        <a href="https://www.youtube.com/channel/UCEdkY9jDg2aHpq6Ms1kW4kQ" target="_blank"><svg class="header-icon">
+            <use href="public/icons.svg#icon-youtube"></use>
+          </svg></a>
       </div>
+
 
       <div class="button">
         <button
